# DORM

./: .flake8  MANIFEST.in  pyproject.toml  tox.ini
django/: __init__.py
django/apps/: config.py  registry.py
django/conf/: __init__.py  global_settings.py
django/core/: exceptions.py  paginator.py  signals.py
django/db/: __init__.py
django/forms/: renderers.py  widgets.py
django/test/: __init__.py  runner.py  signals.py  testcases.py  utils.py
django/utils/: choices.py  crypto.py  text.py
docs/: conf.py
dorm/: __init__.py
dorm/apps/: config.py  registry.py
dorm/conf/: __init__.py  global_settings.py
dorm/core/: exceptions.py  paginator.py  signing.py  validators.py
dorm/db/: __init__.py  transaction.py  utils.py
dorm/dispatch/: __init__.py  dispatcher.py
dorm/test/: __init__.py  runner.py  signals.py  testcases.py  utils.py
dorm/utils/: _os.py  asyncio.py  choices.py  connection.py  copy.py  crypto.py  dateparse.py  deconstruct.py  deprecation.py  encoding.py  functional.py  http.py  inspect.py  ipv6.py  module_loading.py  regex_helper.py  safestring.py  text.py  timezone.py  tree.py  version.py  warnings.py
scripts/: check_migrations.py  do_django_release.py  manage_translations.py
tests/: runtests.py  test_sqlite.py
tests/absolute_url_overrides/: tests.py
tests/aggregation/: models.py  test_filter_argument.py  tests.py
tests/annotations/: models.py  tests.py
tests/app_loading/: tests.py
tests/base/: models.py
tests/basic/: models.py  tests.py
tests/bulk_create/: models.py  tests.py
tests/constraints/: models.py  tests.py
tests/custom_columns/: models.py  tests.py
tests/custom_lookups/: models.py  tests.py
tests/custom_methods/: models.py  tests.py
tests/custom_migration_operations/: more_operations.py  operations.py
tests/custom_pk/: fields.py  models.py  tests.py
tests/datatypes/: models.py  tests.py
tests/dates/: models.py  tests.py
tests/datetimes/: models.py  tests.py
tests/db_functions/: models.py  test_uuid.py  tests.py
tests/db_typecasts/: tests.py
tests/db_utils/: tests.py
tests/dbshell/: test_mysql.py  test_oracle.py  test_postgresql.py  test_sqlite.py  tests.py
tests/defer/: models.py  tests.py
tests/dispatch/: tests.py
tests/distinct_on_fields/: models.py  tests.py
tests/empty/: models.py  tests.py
tests/empty_models/: test_commands.py
tests/expressions/: models.py  test_queryset_values.py  tests.py
tests/expressions_case/: models.py  tests.py
tests/expressions_window/: models.py  tests.py
tests/field_defaults/: models.py  tests.py
tests/field_subclassing/: fields.py  tests.py
tests/files/: tests.py
tests/fixtures_model_package/: tests.py
tests/force_insert_update/: models.py  tests.py
tests/from_db_value/: models.py  tests.py
tests/get_earliest_or_latest/: models.py  tests.py
tests/get_or_create/: models.py  tests.py
tests/indexes/: models.py  tests.py
tests/inspectdb/: models.py  tests.py
tests/introspection/: models.py  tests.py
tests/known_related_objects/: models.py  tests.py
tests/lookup/: models.py  test_decimalfield.py  test_lookups.py  test_timefield.py  tests.py
tests/m2m_and_m2o/: models.py  tests.py
tests/m2m_intermediary/: models.py  tests.py
tests/m2m_multiple/: models.py  tests.py
tests/m2m_recursive/: models.py  tests.py
tests/m2m_signals/: models.py  tests.py
tests/no_models/: tests.py
tests_ours/: conftest.py  models.py  settings.py  test_async_orm.py  test_async_postgresql.py  test_migrations.py  test_queries.py
(+368 files in other folders)
