[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dorm-orm"
version = "6.2"
requires-python = ">= 3.12"
dependencies = [
    "asgiref>=3.9.1",
    "sqlparse>=0.5.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "tzdata; sys_platform == 'win32'",
]
authors = [
  {name = "Mathias Fernandes", email = "mathias.silva.fernandes@gmail.com"},
]
description = "Django's ORM and migration system, extracted for standalone use."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE", "LICENSE.python", "AUTHORS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Mathias206/DORM"
Documentation = "https://docs.djangoproject.com/"
"Release notes" = "https://github.com/Mathias206/DORM"
Funding = "https://www.djangoproject.com/fundraising/"
Source = "https://github.com/Mathias206/DORM"
Tracker = "https://code.djangoproject.com/"

[tool.black]
target-version = ["py312"]
force-exclude = "tests/test_runner_apps/tagged/tests_syntax_error.py"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "dorm"


[tool.setuptools.packages.find]
include = ["dorm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests_ours"]
